--- a/public/patterns/04-pages-00-homepage-loggedin/04-pages-00-homepage-loggedin.escaped.html
+++ b/public/patterns/04-pages-00-homepage-loggedin/04-pages-00-homepage-loggedin.escaped.html
@@ -192,124 +192,124 @@
           	&lt;/div&gt;
           &lt;/section&gt;      &lt;section class=&quot;l-two-col&quot;&gt;
           &lt;section class=&quot;l-main&quot;&gt;
-            &lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
-            &lt;h3 class=&quot;section-title&quot;&gt;Seuraamani kohteet
-            &lt;/h3&gt;
-            &lt;div class=&quot;list-lift&quot;&gt;
-                &lt;div class=&quot;content-list&quot;&gt;
-                    &lt;ul&gt;
-                        &lt;li class=&quot;single-list-item&quot;&gt;
-                            &lt;ul class=&quot;items-container&quot;&gt;
-                                &lt;!--&lt;li class=&quot;block-item&quot;&gt;
-                    &lt;div class=&quot;lad&quot;&gt;
-                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
-                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
-                    &lt;/div&gt;
-                    &lt;/li&gt;--&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
-                                    &lt;div class=&quot;count-container&quot;&gt;
-                                        &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                                        &lt;a href=&quot;//www.foo.bar&quot;&gt;0&lt;/a&gt;
-                                    &lt;/div&gt;
-                                &lt;/li&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
+                &iuml;&raquo;&iquest;&lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
+                    &lt;h3 class=&quot;section-title&quot;&gt;Seuraamani kohteet
+                    &lt;/h3&gt;
+                    &lt;div class=&quot;list-lift&quot;&gt;
+                        &lt;div class=&quot;content-list&quot;&gt;
+                            &lt;ul&gt;
+                                &lt;li class=&quot;single-list-item&quot;&gt;
+                                    &lt;ul class=&quot;items-container&quot;&gt;
+                                        &lt;!--&lt;li class=&quot;block-item&quot;&gt;
                                     &lt;div class=&quot;lad&quot;&gt;
-                                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum hanke&lt;/a&gt;
-                                        &lt;p class=&quot;description&quot;&gt;
-                                            &lt;a href=&quot;#&quot;&gt;LoremIpsumChat&lt;/a&gt; chatissa on viel&Atilde;&curren; tilaa.
-                                        &lt;/p&gt;
+                                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
+                                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
                                     &lt;/div&gt;
+                                    &lt;/li&gt;--&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;count-container&quot;&gt;
+                                                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+                                                &lt;a href=&quot;//www.foo.bar&quot;&gt;0&lt;/a&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;lad&quot;&gt;
+                                                &lt;a href=&quot;#&quot;&gt;Lorem ipsum hanke&lt;/a&gt;
+                                                &lt;p class=&quot;description&quot;&gt;
+                                                    &lt;a href=&quot;#&quot;&gt;LoremIpsumChat&lt;/a&gt; chatissa on viel&Atilde;&curren; tilaa.
+                                                &lt;/p&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                    &lt;/ul&gt;
+                                &lt;/li&gt;
+                                &lt;li class=&quot;single-list-item&quot;&gt;
+                                    &lt;ul class=&quot;items-container&quot;&gt;
+                                        &lt;!--&lt;li class=&quot;block-item&quot;&gt;
+                                    &lt;div class=&quot;lad&quot;&gt;
+                                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
+                                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
+                                    &lt;/div&gt;
+                                    &lt;/li&gt;--&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;count-container&quot;&gt;
+                                                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+                                                &lt;a href=&quot;//www.foo.bar&quot;&gt;22&lt;/a&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;lad&quot;&gt;
+                                                &lt;a href=&quot;#&quot;&gt;Lorem ipsum hanke&lt;/a&gt;
+                                                &lt;p class=&quot;description&quot;&gt;
+                                                    22 henkil&Atilde;&para;&Atilde;&curren; osallistunut chattiin &lt;a href=&quot;&quot;&gt;Lorem lipsum chat#2&lt;/a&gt;
+                                                &lt;/p&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                    &lt;/ul&gt;
+                                &lt;/li&gt;
+                                &lt;li class=&quot;single-list-item&quot;&gt;
+                                    &lt;ul class=&quot;items-container&quot;&gt;
+                                        &lt;!--&lt;li class=&quot;block-item&quot;&gt;
+                                    &lt;div class=&quot;lad&quot;&gt;
+                                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
+                                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
+                                    &lt;/div&gt;
+                                    &lt;/li&gt;--&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;count-container&quot;&gt;
+                                                &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
+                                                &lt;a href=&quot;//www.foo.bar&quot;&gt;48&lt;/a&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;lad&quot;&gt;
+                                                &lt;a href=&quot;&quot;&gt;Lorem lipsum hanke#3&lt;/a&gt;
+                                                &lt;p class=&quot;description&quot;&gt;
+                                                    48 henkil&Atilde;&para;&Atilde;&curren; osallistui chattiin &lt;a href=&quot;&quot;&gt;Lorem lipsum chat#3&lt;/a&gt;
+                                                &lt;/p&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                    &lt;/ul&gt;
                                 &lt;/li&gt;
                             &lt;/ul&gt;
-                        &lt;/li&gt;
-                        &lt;li class=&quot;single-list-item&quot;&gt;
-                            &lt;ul class=&quot;items-container&quot;&gt;
-                                &lt;!--&lt;li class=&quot;block-item&quot;&gt;
-                    &lt;div class=&quot;lad&quot;&gt;
-                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
-                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
-                    &lt;/div&gt;
-                    &lt;/li&gt;--&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
-                                    &lt;div class=&quot;count-container&quot;&gt;
-                                        &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                                        &lt;a href=&quot;//www.foo.bar&quot;&gt;22&lt;/a&gt;
-                                    &lt;/div&gt;
-                                &lt;/li&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
-                                    &lt;div class=&quot;lad&quot;&gt;
-                                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum hanke&lt;/a&gt;
-                                        &lt;p class=&quot;description&quot;&gt;
-                                            22 henkil&Atilde;&para;&Atilde;&curren; osallistunut chattiin &lt;a href=&quot;&quot;&gt;Lorem lipsum chat#2&lt;/a&gt;
-                                        &lt;/p&gt;
-                                    &lt;/div&gt;
-                                &lt;/li&gt;
-                            &lt;/ul&gt;
-                        &lt;/li&gt;
-                        &lt;li class=&quot;single-list-item&quot;&gt;
-                            &lt;ul class=&quot;items-container&quot;&gt;
-                                &lt;!--&lt;li class=&quot;block-item&quot;&gt;
-                    &lt;div class=&quot;lad&quot;&gt;
-                        &lt;a href=&quot;#&quot;&gt;Lorem ipsum&lt;/a&gt;
-                        &lt;p class=&quot;description&quot;&gt;test&lt;/p&gt;
-                    &lt;/div&gt;
-                    &lt;/li&gt;--&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
-                                    &lt;div class=&quot;count-container&quot;&gt;
-                                        &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-                                        &lt;a href=&quot;//www.foo.bar&quot;&gt;48&lt;/a&gt;
-                                    &lt;/div&gt;
-                                &lt;/li&gt;
-                                &lt;li class=&quot;block-item&quot;&gt;
-                                    &lt;div class=&quot;lad&quot;&gt;
-                                        &lt;a href=&quot;&quot;&gt;Lorem lipsum hanke#3&lt;/a&gt;
-                                        &lt;p class=&quot;description&quot;&gt;
-                                            48 henkil&Atilde;&para;&Atilde;&curren; osallistui chattiin &lt;a href=&quot;&quot;&gt;Lorem lipsum chat#3&lt;/a&gt;
-                                        &lt;/p&gt;
-                                    &lt;/div&gt;
-                                &lt;/li&gt;
-                            &lt;/ul&gt;
-                        &lt;/li&gt;
-                    &lt;/ul&gt;
-                &lt;/div&gt;
-                &lt;p class=&quot;read-more&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-                &lt;/p&gt;
-            &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div id=&quot;pnlInterestingProjects&quot; class=&quot;content-item large&quot;&gt;
-                &lt;h3 class=&quot;section-title&quot;&gt;Kiinnostavia hankkeita
-                &lt;/h3&gt;
-                &lt;div class=&quot;list-lift&quot;&gt;
-                    &lt;div class=&quot;content-list&quot;&gt;
-                        &lt;ul&gt;
-                            &lt;li class=&quot;single-list-item&quot;&gt;
-                                &lt;ul class=&quot;items-container&quot;&gt;
-                                    &lt;li class=&quot;block-item&quot;&gt;
-                                        &lt;div class=&quot;lad&quot;&gt;
-                                            &lt;a href=&quot;#&quot;&gt;Toinen Lorem ipsum hanke&lt;/a&gt;
-                                            &lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
-                                        &lt;/div&gt;
-                                    &lt;/li&gt;
-                                &lt;/ul&gt;
-                            &lt;/li&gt;
-                            &lt;li class=&quot;single-list-item&quot;&gt;
-                                &lt;ul class=&quot;items-container&quot;&gt;
-                                    &lt;li class=&quot;block-item&quot;&gt;
-                                        &lt;div class=&quot;lad&quot;&gt;
-                                            &lt;a href=&quot;#&quot;&gt;Kolmas Lorem ipsum hanke&lt;/a&gt;
-                                            &lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
-                                        &lt;/div&gt;
-                                    &lt;/li&gt;
-                                &lt;/ul&gt;
-                            &lt;/li&gt;
-                        &lt;/ul&gt;
+                        &lt;/div&gt;
+                        &lt;p class=&quot;read-more&quot;&gt;
+                            &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+                        &lt;/p&gt;
                     &lt;/div&gt;
                 &lt;/div&gt;
-                &lt;p class=&quot;read-more&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; kaikki hankkeet &Acirc;&raquo;&lt;/a&gt;
-                &lt;/p&gt;
-            &lt;/div&gt;
+                &lt;div id=&quot;pnlInterestingProjects&quot; class=&quot;content-item large&quot;&gt;
+                    &lt;h3 class=&quot;section-title&quot;&gt;Kiinnostavia hankkeita
+                    &lt;/h3&gt;
+                    &lt;div class=&quot;list-lift&quot;&gt;
+                        &lt;div class=&quot;content-list&quot;&gt;
+                            &lt;ul&gt;
+                                &lt;li class=&quot;single-list-item&quot;&gt;
+                                    &lt;ul class=&quot;items-container&quot;&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;lad&quot;&gt;
+                                                &lt;a href=&quot;#&quot;&gt;Toinen Lorem ipsum hanke&lt;/a&gt;
+                                                &lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                    &lt;/ul&gt;
+                                &lt;/li&gt;
+                                &lt;li class=&quot;single-list-item&quot;&gt;
+                                    &lt;ul class=&quot;items-container&quot;&gt;
+                                        &lt;li class=&quot;block-item&quot;&gt;
+                                            &lt;div class=&quot;lad&quot;&gt;
+                                                &lt;a href=&quot;#&quot;&gt;Kolmas Lorem ipsum hanke&lt;/a&gt;
+                                                &lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
+                                            &lt;/div&gt;
+                                        &lt;/li&gt;
+                                    &lt;/ul&gt;
+                                &lt;/li&gt;
+                            &lt;/ul&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;p class=&quot;read-more&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; kaikki hankkeet&lt;/a&gt;
+                    &lt;/p&gt;
+                &lt;/div&gt;
           &lt;/section&gt;
           &lt;aside class=&quot;l-sidebar&quot;&gt;
               &lt;section id=&quot;ProjectSearch&quot; class=&quot;content-item project-search&quot;&gt;
